src/Containers/ProConList/ProConList.css
.Column {
  display: flex;
  flex-basis: 100%;
  padding: 0 5px;
  background: black;
}

.prosConsWrapper {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  color: white;
}

.columnHeading {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.listLabelHeading {
  cursor: pointer;
  position: relative;
  z-index: 100;
  display: flex;
  align-items: center;
  z-index: 10;
}

.listLabelHeading:hover > .listHeadingPen {
  opacity: 0.7;
}

.listHeadingPen {
  margin-left: 10px;
  height: 18px;
  opacity: 0;
  transition: opacity 0.2s ease-in;
}

.labelHeadingInput {
  font-family: sans-serif;
  visibility: hidden;
  position: absolute;
  opacity: 0;
  transition: opacity 0.1s ease-in;
  outline: black;
  font-size: 1.5rem;
  font-weight: bold;
  background: black;
  color: white;
  border: none;
}

.labelHeadingAppear {
  opacity: 1;
  visibility: visible;
}

.listDelBtn {
  cursor: pointer;
  border: 1px solid #fff;
  outline: black;
  border-radius: 10px;
  color: #fff;
  opacity: 0.4;
  font-size: 0.8rem;
  background: none;
  transition: opacity 0.2s ease-in;
}

.listDelBtn:hover {
  opacity: 0.8;
}

.pencilIcon {
  margin-left: 10px;
  font-size: 1rem;
}

.prosContainer {
  position: relative;
  flex-basis: 100%;
  /* background-color: #62bd82; */
  background-color: #62bd825b;
  border-radius: 5px;
}

.proconsHeading {
  position: absolute;
  bottom: 0;
  right: 0;
  font-size: 3.5rem;
  font-weight: 900;
  opacity: 0.03;
}

.proConListGroup {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.proConListGroup > button {
  background: none;
  border: none;
  padding: 0 5px;
  outline: none;
  opacity: 0;
  cursor: pointer;
  transition: opacity 0.4s ease-in;
}

.proConListGroup:hover > button {
  opacity: 0.5;
}

.editItemIcon {
  height: 12px;
  margin-left: 10px;
  transition: opacity 0.2s ease-in;
}

.editItemIcon:hover {
  opacity: 0.4;
}

.deleteItemIcon {
  height: 12px;
  transition: opacity 0.2s ease-in;
}

.deleteItemIcon:hover {
  opacity: 0.4;
}

.addListItem {
  position: relative;
  list-style-type: none;
}

.addListItemBtn {
  cursor: pointer;
  margin-top: 5px;
  padding: 5px;
  font-size: 0.8em;
  letter-spacing: 1.5;
  color: white;
  border: none;
  border-radius: 5px;
  background: rgba(0, 0, 0, 0.3);
  outline: black;
  opacity: 1;
  transition: opacity 0.2s ease-in;
  position: relative;
  z-index: 10;
}

.hideAddBtn {
  opacity: 0;
  z-index: -1;
}

.consContainer {
  position: relative;
  flex-basis: 100%;
  /* background-color: #fa4e71; */
  background-color: #fa4e705e;
  border-radius: 5px;
}

.divider {
  height: 20px;
}

.addListItemInput {
  position: absolute;
  left: 0;
  top: 6px;
  font-size: 0.9rem;
  outline: black;
  width: 100px;
  height: 20px;
  border: none;
  background: rgba(0, 0, 0, 0.2);
  border-radius: 2px;
  opacity: 0;
  transition: opacity 0.3s ease-in;
  z-index: 1;
  color: white;
}

.appearListItemInput {
  opacity: 1;
}

